Less conversions between array and list
Signed-off-by: Artur Biesiadowski <artur.biesiadowski@swirldslabs.com>